# feishu_mcp

./: .env.example  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  pyproject.toml
src/feishu_mcp_sdk/: __init__.py  cli.py  config.py  exceptions.py  server.py
src/feishu_mcp_sdk/api/: __init__.py  client.py  exceptions.py  oauth_manager.py
src/feishu_mcp_sdk/resources/: docx_block_structure.md
src/feishu_mcp_sdk/services/: __init__.py  document_service.py  http_client_mixin.py
